# wirefreeserver

./: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Encoder.cpp  Makefile  Output.txt  README.md  Reference.cpp  Todo.txt  VulkanBackend.cpp  cmake_install.cmake  driver.cpp  vcpkg.json  w1reless.vrdrivermanifest
.cache/clangd/index/: Display.cpp.BE16BEBBD60D5739.idx  Display.h.431084F0B3435EA3.idx  Encoder.cpp.0459F25C1CA6596D.idx  Encoder.cpp.B91574E4A9E1FA9F.idx  Headset.cpp.763B5F8A57970035.idx  Headset.h.FC2D8A5D9A6EC4A4.idx  VulkanBackend.cpp.D8C4E7A755F55944.idx  VulkanBackend.cpp.F7A57768274CF6EF.idx  VulkanBackend.h.313C4560FC885582.idx  driver.cpp.97F4CFEDE51ACE7D.idx  driver.cpp.F6DC04A614C45E03.idx  vrDriver.cpp.4D618C1DA51D300A.idx  vrDriver.cpp.DA1956465C3E517C.idx
include/: Display.h  Headset.h  Query.h  VulkanBackend.h
linux64/: Display.cpp  Headset.cpp  VulkanBackend.cpp  driver.cpp  vrDriver.cpp
src/: Encoder.cpp  VulkanBackend.cpp  driver.cpp
